# Intro_robot_in_ROS2

./: README.md  package.xml  setup.cfg  setup.py
intro_robot/: giraff_robot.py  joint_controller.py  robot_controller.py
launch/: giraff_robot.launch.py
rviz/: giraff_robot.rviz
urdf/: giraff_robot.urdf
